--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i": "^0.3.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
