--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-scripts": "4.0.3"
+    "react-loading": "^2.0.3",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
