--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -11,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.5"
   },
