--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^9.9.3",
     "i": "^0.3.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
